Fix vignettes visibles au défilement au bord gauche du slider

--- a/partials/blocks/types/types.css
+++ b/partials/blocks/types/types.css
@@ -42,7 +42,8 @@
 }
 .acf-types .slider-wrap {
   margin-bottom: 2rem;
-  padding-left: var(--padding-x-lg);
+  margin-left: var(--padding-x-lg);
+  overflow-x: hidden;
 }
 .acf-types .nav-slider {
   padding-right: var(--padding-x-lg);
